[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic_viz"
version = "0.1.0"
description = "PeMS I-5 NB travel time analysis and visualization"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "streamlit>=1.36",
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "plotly>=5.18",
  "pyarrow>=14.0",
  "requests>=2.31",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "black>=24.0"]

[project.scripts]
traffic_viz = "traffic_viz.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
